# ompdart

./: .gitignore  CMakeLists.txt  README.md  build.sh  download_dataset.sh  run.sh
evaluation/: generate_ompdart_mappings.sh  profile_all.sh  run_all.sh
evaluation/src/accuracy-omp/: .gitignore  Makefile  Makefile.naive  Makefile.ompdart  main_naive.cpp  main_ompdart.cpp  main_ompdart_modified.cpp  main_stripped.cpp
evaluation/src/ace-omp/: Makefile  Makefile.naive  Makefile.ompdart  Makefile.ompdart_aggressive  main_naive.cpp  main_ompdart.cpp  main_ompdart_aggressive.cpp  main_ompdart_modified.cpp  main_ompdart_modified_aggressive.cpp  main_stripped.cpp
evaluation/src/backprop-omp/: .gitignore  Makefile  Makefile.naive  Makefile.ompdart  Makefile.ompdart_old  main_naive.cpp  main_ompdart.cpp  main_ompdart_modified.cpp  main_ompdart_modified_old.cpp  main_ompdart_old.cpp  main_stripped.cpp
evaluation/src/bfs/: .gitignore  Makefile  bfs.cpp  bfs_naive.cpp  bfs_ompdart.cpp  bfs_ompdart.cpp.old  bfs_ompdart_modified.cpp  bfs_ompdart_modified.cpp.old  bfs_stripped.cpp
evaluation/src/clenergy-omp/: .gitignore  Makefile  Makefile.naive  Makefile.ompdart  clenergy.cpp  clenergy_naive.cpp  clenergy_ompdart.cpp  clenergy_ompdart_modified.cpp  clenergy_stripped.cpp
evaluation/src/hotspot/: .gitignore  Makefile  hotspot_openmp.cpp  hotspot_openmp.cpp.bak  hotspot_openmp_naive.cpp  hotspot_openmp_ompdart.cpp  hotspot_openmp_ompdart_modified.cpp  hotspot_openmp_stripped.cpp
evaluation/src/lulesh-omp/: .gitignore  Makefile  Makefile.naive  Makefile.ompdart  lulesh_naive.cc  lulesh_ompdart.cc  lulesh_ompdart_modified.cc  lulesh_stripped.cc
evaluation/src/nw/: .gitignore  Makefile  needle.cpp  needle_naive.cpp  needle_ompdart.cpp  needle_ompdart_modified.cpp  needle_stripped.cpp
evaluation/src/xsbench-omp/: .gitignore  Makefile  Makefile.naive  Makefile.ompdart  Simulation.cpp  Simulation_naive.cpp  Simulation_ompdart.cpp  Simulation_ompdart_modified.cpp  Simulation_stripped.cpp
src/: AccessInfo.h  AnalysisUtils.cpp  CMakeLists.txt  ClauseInfo.h  CommonUtils.cpp  DataTracker.cpp  DataTracker.h  DirectiveRewriter.cpp  FindDecl.cpp  Kernel.cpp  Kernel.h  OmpDart.cpp  OmpDartASTConsumer.cpp  OmpDartASTConsumer.h  OmpDartASTVisitor.cpp  OmpDartASTVisitor.h  TargetDataRegion.cpp  TargetDataRegion.h
src/rose/: AccessInfo.h  AnalysisUtils.cpp  AnalysisUtils.h  CMakeLists.txt  ClauseInfo.h  CommonUtils.cpp  CommonUtils.h  DataTracker.cpp  DataTracker.h  DirectiveRewriter.cpp  DirectiveRewriter.h  Kernel.cpp  Kernel.h  Rose.cpp  RoseASTConsumer.cpp  RoseASTConsumer.h  RoseASTVisitor.cpp  RoseASTVisitor.h  TargetDataRegion.cpp  TargetDataRegion.h  TargetDataScope.cpp  TargetDataScope.h  TargetRegion.cpp  TargetRegion.h
